# cpp-docker

./: .gitignore  Dockerfile  README.md  compose.yml
src/: CMakeLists.txt  hello-world.cpp
